<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/preto"
    tools:context=".contato">

    <Button
        android:id="@+id/btnhome16"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="#00FFFFFF"
        android:onClick="btnmenu"
        app:icon="@android:drawable/ic_menu_sort_by_size"
        app:iconSize="40dp"
        app:iconTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgtopo15"
        android:layout_width="159dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="126dp"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoharry" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="400dp"
        android:layout_height="688dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnhome8">

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="425dp"
                android:layout_height="245dp"
                app:srcCompat="@drawable/contatofund" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/txt1"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="363dp"
                android:layout_height="34dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/white"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/txt2"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="363dp"
                android:layout_height="34dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/white"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/txt3"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/coment"
                android:layout_width="363dp"
                android:layout_height="107dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/white"
                android:textSize="13dp" />

            <Button
                android:id="@+id/btnenviar"
                android:layout_width="363dp"
                android:layout_height="56dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="23dp"
                android:backgroundTint="@color/Dourado"
                android:fontFamily="sans-serif-black"
                android:text="@string/btnenviar"
                android:textSize="16dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnvoltar"
                    android:layout_width="169dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/Dourado"
                    android:fontFamily="sans-serif-black"
                    android:onClick="btnhome"
                    android:text="@string/btnvoltar"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnexibir"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnexibir"
                    android:layout_width="169dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="29dp"
                    android:backgroundTint="@color/Dourado"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/btnexibir"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnvoltar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>